# rust-ipfs-cmd

./: Cargo.toml
src/: app.yml  main.rs
