[package]
name = "ipfs"
version = "0.1.0"
authors = ["Zyansheep <zyansheep@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33.3", features = ["yaml"]}
log = "0.4.11"
env_logger = "0.7.1"

ipfs = {git = "https://github.com/rs-ipfs/rust-ipfs"}
tokio = { version = "0.2.21", features = ["full"] }
futures = "0.3.5"
cid = "0.5.1"
ipfs-api = "0.7.2"
ctrlc = "3.1.6"
